--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     </div>
                     <div class="tab-pane fade" id="pills-app" role="tabpanel" aria-labelledby="pills-app-tab">
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-md-4 mb-4">
                                 <div class="portfolio-img position-relative overflow-hidden">
                                     <div class="img">
                                         <img src="img/portfolio-1.jpg" alt="" class="img-fluid">
@@ -262,7 +262,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-4 mb-4">
                                 <div class="portfolio-img position-relative overflow-hidden">
                                     <div class="img">
                                         <img src="img/portfolio-3.jpg" alt="" class="img-fluid">
@@ -281,7 +281,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-4 mb-4">
                                 <div class="portfolio-img position-relative overflow-hidden">
                                     <div class="img">
                                         <img src="img/portfolio-6.jpg" alt="" class="img-fluid">
@@ -304,7 +304,7 @@
                     </div>
                     <div class="tab-pane fade" id="pills-card" role="tabpanel" aria-labelledby="pills-card-tab">
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-md-4 mb-4">
                                 <div class="portfolio-img position-relative overflow-hidden">
                                     <div class="img">
                                         <img src="img/portfolio-4.jpg" alt="" class="img-fluid">
@@ -323,7 +323,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-4 mb-4">
                                 <div class="portfolio-img position-relative overflow-hidden">
                                     <div class="img">
                                         <img src="img/portfolio-7.jpg" alt="" class="img-fluid">
@@ -342,7 +342,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-4 mb-4">
                                 <div class="portfolio-img position-relative overflow-hidden">
                                     <div class="img">
                                         <img src="img/portfolio-8.jpg" alt="" class="img-fluid">
@@ -365,7 +365,7 @@
                     </div>
                     <div class="tab-pane fade" id="pills-web" role="tabpanel" aria-labelledby="pills-web-tab">
                         <div class="row">
-                            <div class="col-md-4">
+                            <div class="col-md-4 mb-4">
                                 <div class="portfolio-img position-relative overflow-hidden">
                                     <div class="img">
                                         <img src="img/portfolio-2.jpg" alt="" class="img-fluid">
@@ -384,7 +384,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-4 mb-4">
                                 <div class="portfolio-img position-relative overflow-hidden">
                                     <div class="img">
                                         <img src="img/portfolio-5.jpg" alt="" class="img-fluid">
@@ -403,7 +403,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-4 mb-4">
                                 <div class="portfolio-img position-relative overflow-hidden">
                                     <div class="img">
                                         <img src="img/portfolio-9.jpg" alt="" class="img-fluid">
