--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Arsha</title>
 </head>
 <body>
-<!-- Action Section -->
+<!-- START Action Section -->
     <section class="action">
         <div class="container">
             <div class="row align-items-center">
@@ -27,9 +27,9 @@
             </div>
         </div>
     </section>
-<!-- Action Section -->
+<!-- END Action Section -->
 
-<!-- Portfolio Section -->
+<!-- START Portfolio Section -->
     <section class="portfolio py-5">
         <div class="container">
             <div class="row justify-content-center text-center">
@@ -428,7 +428,7 @@
             </div>
         </div>
     </section>
-<!-- Portfolio Section -->
+<!-- END Portfolio Section -->
 
 
     <script src="js/jquery-3.5.1.slim.min.js"></script>
